more readable format for message